# meli-2024

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt
src/: app.py  data.json
src/handlers/: base_handler.py  chain_builder.py  csv_handler.py  json_handler.py
src/utils/: logger.py  response.py
