[tool.poetry]
name = "meli-2024"
version = "0.1.0"
description = ""
authors = ["Leonardo HG <leonardohg.ipn@gmail.com>"]
readme = "README.md"

packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
sqlalchemy = "^2.0.36"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.7"
redis = "^5.2.1"
kafka = "^1.3.5"
pytest = "^8.3.4"
debugpy = "^1.8.9"
black = "^24.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
